squish fixed

--- a/src/styles/_api-info.scss
+++ b/src/styles/_api-info.scss
@@ -51,7 +51,7 @@ body {
   font-family: 'Roboto', sans-serif;
   background: $bg;
   color: $gray;
-  display: flex;
+  // display: flex;
   min-height: 100vh;
 }
 
